[tool.poetry]
name = "yass"
version = "1.0.0"
description = "Yet Another (RIT Bus) Schedule Scraper"
authors = ["Mickey P <me@minkedup.xyz>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
yass = "yass:main"

[tool.poetry.dependencies]
python = "^3.10"
lxml = "^5.3.1"
requests = "^2.32.3"
pyserde = "^0.23.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
black = "^25.1.0"
pylint = "^3.3.4"
lxml-stubs = "^0.5.1"
types-requests = "^2.32.0.20250306"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
